# bears

./: CHANGELOG.md  Cargo.toml  dist-workspace.toml  justfile
.github/workflows/: release.yml
bears/: Cargo.toml
bears/src/: command.rs  lib.rs  main.rs
bears/src/value/: sets.rs
bears_ecology/src/: app.rs  config.rs  free.rs  queue.rs  request.rs  tracker.rs
bears_health/: Cargo.toml
bears_health/src/: fa_codes.rs  helpers.rs  iip.rs  industry_codes.rs  io_codes.rs  lib.rs  set.rs
bears_health/src/key_sets/: fa_sets.rs  gdp_sets.rs  iip_sets.rs  io_sets.rs  mod.rs
bears_health/src/value_sets/: gdp_codes.rs  mod.rs
bears_health/tests/: unit.rs
bears_species/src/: data.rs  dataset.rs  error.rs  free.rs  lib.rs  notes.rs  parameter.rs  parameter_value.rs  request.rs  results.rs
bears_species/src/key_sets/: fixed_assets.rs  gdp_by_industry.rs  iip.rs  input_output.rs  mne.rs  mod.rs
bears_species/src/keys/: classification.rs  currency.rs  fixed_asset_line.rs  fixed_asset_table.rs  footnote.rs  input_output_table.rs  investment.rs  metric.rs  millions.rs  mod.rs  numeric.rs  owner.rs  year.rs
bears_species/src/keys/naics/: core.rs  input_output.rs  subsector.rs
