[package]
name = "bears"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../README.md"
# homepage.workspace = true
# rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bears"

[dependencies]
clap = { workspace = true }
bears_ecology.workspace = true
bears_species.workspace = true
derive-getters = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
derive_setters = { workspace = true }
dotenvy = { workspace = true }
nom = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
