[package]
name = "bears_health"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Testing suite for the bears library."
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../README.md"
# homepage.workspace = true
# rust-version.workspace = true

[features]
api = []

[dependencies]
bears_ecology = { workspace = true }
bears_species = { workspace = true }
derive-getters.workspace = true
derive-new.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
